[WIP] bridge done, local deployment tests

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,10 @@ sklearn = "*"
 scikit-learn = "*"
 xgboost = "*"
 cmake = "*"
+fastapi = "*"
+pydantic = "*"
+uvicorn = "*"
+httpx = "*"
 
 [dev-packages]
 
