--- a/Pipfile
+++ b/Pipfile
@@ -11,11 +11,8 @@ tqdm = "*"
 unidecode = "*"
 nltk = "*"
 statsmodels = "*"
-sklearn = "*"
 scikit-learn = "*"
-xgboost = "*"
 cmake = "*"
-fastapi = "*"
 pydantic = "*"
 uvicorn = "*"
 httpx = "*"
@@ -24,6 +21,8 @@ dash = "*"
 plotly = "*"
 boto3 = "*"
 python-dotenv = "*"
+gunicorn = "*"
+fastapi = "*"
 
 [dev-packages]
 matplotlib = "*"
