[FIX] docker issue app launch

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,8 @@ boto3 = "*"
 python-dotenv = "*"
 gunicorn = "*"
 fastapi = "*"
+pyarrow = "*"
+fastparquet = "*"
 
 [dev-packages]
 matplotlib = "*"
