[AWS DPLY] Set up

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 *.csv
 playground.ipynb
 *.pyc
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
