[UPDATE] remote file paths

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@
 *.pyc
 .env
 *.csv
+*.parquet
 playground.ipynb
 *.pyc
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+.DS_Store
